--- a/core/build.gradle
+++ b/core/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 
 //    implementation 'org.bouncycastle:bcprov-jdk18on'
 
-//    implementation 'com.google.guava:guava'
+//    implementation 'com.google.guava:guava:33.3.0-jre'
 //    implementation 'io.projectreactor:reactor-core'
 //    implementation 'io.netty:netty-all'
     implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
