--- a/core/build.gradle
+++ b/core/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'org.apache.tuweni:tuweni-crypto:2.3.1'
     implementation 'org.apache.tuweni:tuweni-rlp:2.3.1'
     implementation 'org.apache.tuweni:tuweni-units:2.3.1'
+    implementation 'org.apache.tuweni:tuweni-ssz:2.3.1'
     implementation 'io.vertx:vertx-core:4.5.9'
     implementation 'io.vertx:vertx-web:4.5.9'
     implementation 'io.netty:netty-all:4.1.110.Final'
@@ -54,6 +55,11 @@ dependencies {
     implementation 'tech.pegasys.teku.internal:http:24.8.0'
     implementation 'tech.pegasys.teku.internal:json:24.8.0'
     implementation 'com.github.oshi:oshi-core:6.6.2'
+
+    implementation 'tech.pegasys.teku.internal:ssz:develop'
+    implementation 'tech.pegasys.teku.internal:unsigned:develop'
+
+
 
 
     compileOnly 'org.projectlombok:lombok:1.18.34'
