--- a/core/build.gradle
+++ b/core/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     implementation 'tech.pegasys.teku.internal:unsigned:develop'
 
 
+    implementation 'org.assertj:assertj-core:3.26.0'
+    implementation 'org.mockito:mockito-core:5.12.0'
 
 
     compileOnly 'org.projectlombok:lombok:1.18.34'
