--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,8 @@ assertj = "3.26.0"
 mockito = "5.12.0"
 lombok = "1.18.34"
 jupiter = "5.8.1"
+rocksdbjni = "8.3.2"
+prometheus = "0.16.0"
 
 [libraries]
 tuweni-bytes = { module = "org.apache.tuweni:tuweni-bytes", version.ref = "tuweni"}
@@ -51,4 +53,8 @@ projectlombok= { module = "org.projectlombok:lombok", version.ref = "lombok"}
 
 junit-jupiter-api= { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "jupiter"}
 junit-jupiter-engine= { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "jupiter"}
+
+rocksdbjni= { module = "org.rocksdb:rocksdbjni", version.ref = "rocksdbjni"}
+prometheus-simpleclient= { module = "io.prometheus:simpleclient", version.ref = "prometheus"}
+
 
