--- a/core/build.gradle
+++ b/core/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation libs.mockito.core
     implementation libs.rocksdbjni
     implementation libs.prometheus.simpleclient
+    implementation libs.jackson.dataformat.yaml
+
 
     compileOnly libs.projectlombok
     annotationProcessor libs.projectlombok
