--- a/buildSrc/src/main/groovy/samba.java-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/samba.java-common-conventions.gradle
@@ -7,10 +7,12 @@ plugins {
 repositories {
     mavenLocal()
     mavenCentral()
+    maven { url "https://jitpack.io" }
     maven { url "https://artifacts.consensys.net/public/maven/maven/" }
     maven { url "https://artifacts.consensys.net/public/teku/maven/" }
     maven { url "https://mvnrepository.com" }
     maven { url "https://hyperledger.jfrog.io/artifactory/besu-maven/" }
+    maven { url "https://dl.cloudsmith.io/public/libp2p/jvm-libp2p/maven/" }
 }
 
 dependencies {
