--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ jupiter = "5.8.1"
 rocksdbjni = "8.3.2"
 prometheus = "0.16.0"
 jackson = "2.17.2"
+libp2p = "1.2.1-RELEASE"
 
 [libraries]
 tuweni-bytes = { module = "org.apache.tuweni:tuweni-bytes", version.ref = "tuweni"}
@@ -59,3 +60,4 @@ rocksdbjni = { module = "org.rocksdb:rocksdbjni", version.ref = "rocksdbjni"}
 prometheus-simpleclient= { module = "io.prometheus:simpleclient", version.ref = "prometheus"}
 jackson-dataformat-yaml = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml", version.ref = "jackson"}
 jackson-datatype-jdk8 = { module = "com.fasterxml.jackson.datatype:jackson-datatype-jdk8", version.ref = "jackson"}
+jvm-libp2p = { module = "io.libp2p:jvm-libp2p", version.ref = "libp2p"}
