--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,6 @@ rootProject.name = 'samba'
 include 'core'
 include 'execution-state-network'
 include 'execution-history-network'
+include 'server-json-rpc'
+include 'storage-rocksdb'
 
