--- a/server-json-rpc/build.gradle
+++ b/server-json-rpc/build.gradle
@@ -4,3 +4,29 @@ plugins {
 
 group = 'samba.server-json-rpc'
 version = '1.0.0'
+
+dependencies {
+    implementation libs.log4j.api
+    implementation libs.log4j.core
+    implementation libs.vertx.core
+    implementation libs.vertx.web
+
+    implementation libs.besu.internal.metrics.core
+    implementation libs.besu.internal.core
+    implementation libs.besu.internal.plugin.api //TODO need to be removed
+
+
+    implementation 'com.google.guava:guava:24.1-jre'
+
+
+    implementation libs.jackson.dataformat.yaml
+    implementation libs.jackson.datatype.jdk8
+
+    compileOnly libs.projectlombok
+    annotationProcessor libs.projectlombok
+    testCompileOnly libs.projectlombok
+    testAnnotationProcessor libs.projectlombok
+    testImplementation libs.junit.jupiter.api
+    testImplementation libs.assertj.core
+    testRuntimeOnly libs.junit.jupiter.engine
+}
