--- a/server-json-rpc/build.gradle
+++ b/server-json-rpc/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     testAnnotationProcessor libs.projectlombok
     testImplementation libs.junit.jupiter.api
     testImplementation libs.assertj.core
+    testImplementation libs.mockito.core
     testRuntimeOnly libs.junit.jupiter.engine
 
 }
