--- a/buildSrc/src/main/groovy/samba.java-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/samba.java-common-conventions.gradle
@@ -19,7 +19,18 @@ dependencies {
     }
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    compileOnly libs.projectlombok
+    annotationProcessor libs.projectlombok
+    testCompileOnly libs.projectlombok
+    testAnnotationProcessor libs.projectlombok
+    testImplementation libs.junit.jupiter.api
+    testImplementation libs.assertj.core
+    testImplementation libs.mockito.core
+    testRuntimeOnly libs.junit.jupiter.engine
 }
+
+
 
 java {
     toolchain {
