--- a/core/build.gradle
+++ b/core/build.gradle
@@ -55,7 +55,6 @@ dependencies {
 
   implementation project(':storage-rocksdb')
   implementation project(':server-json-rpc')
-
   compileOnly libs.projectlombok
   annotationProcessor libs.projectlombok
   testCompileOnly libs.projectlombok
@@ -63,4 +62,6 @@ dependencies {
   testImplementation libs.junit.jupiter.api
   testImplementation libs.assertj.core
   testRuntimeOnly libs.junit.jupiter.engine
+
+  //runtimeOnly 'org.apache.logging.log4j:log4j-jul:2.24.2'
 }
