--- a/buildscripts/buildZip.gradle
+++ b/buildscripts/buildZip.gradle
@@ -1,7 +1,7 @@
 distZip {
     dependsOn untunedStartScripts
+    println "Executing task: ${name}"
     doFirst {
-        println 'distZip'
         delete fileTree(dir: 'build/distributions', include: '*.zip')
     }
     setVersion(archiveBuildVersion)
