--- a/build.gradle
+++ b/build.gradle
@@ -131,7 +131,6 @@ configure(allprojects - project(':platform')) {
 
 dependencies {
   implementation 'com.google.errorprone:error_prone_core:2.7.1'  // Use the appropriate version of ErrorProne
-  // https://github.com/hyperledger/besu-errorprone-checks/
   implementation project(':core')
   implementation 'org.apache.logging.log4j:log4j-api:2.17.0'        // Log4j2 API
   implementation 'org.apache.logging.log4j:log4j-core:2.17.0'       // Log4j2 Core
@@ -212,61 +211,13 @@ jacocoTestReport {
   }
 }
 
-
-//done
 def dockerBuildVersion = project.hasProperty('release.releaseVersion') ? project.property('release.releaseVersion') : "${rootProject.version}"
-def dockerOrgName = project.hasProperty('dockerOrgName') ? project.getProperty("dockerOrgName") : "meldsun"
+def dockerOrgName = project.hasProperty('dockerOrgName') ? project.getProperty("dockerOrgName") : "meldsun_labs"
 def dockerArtifactName = project.hasProperty("dockerArtifactName") ? project.getProperty("dockerArtifactName") : "samba"
 def dockerImageName = "${dockerOrgName}/${dockerArtifactName}"
 
-tasks.register("dockerDistUntar") {
-  dependsOn distTar
-  dependsOn distZip
-  def dockerBuildDir = "build/docker-samba/"
-  def distTarFile = distTar.outputs.files.singleFile
-  def distTarFileName = distTar.outputs.files.singleFile.name.replace(".tar.gz", "")
+apply from: 'buildscripts/buildDocker.gradle'
 
-  doFirst {
-    new File(dockerBuildDir).mkdir()
-    copy {
-      from tarTree(distTarFile)
-      into(dockerBuildDir)
-    }
-    project.delete(files("${dockerBuildDir}/samba"))
-    file("${dockerBuildDir}/${distTarFileName}").renameTo("${dockerBuildDir}/samba")
-  }
-}
-
-tasks.register('distDocker') {
-  dependsOn dockerDistUntar
-  inputs.dir("build/docker-samba/")
-  def dockerBuildDir = "build/docker-samba/"
-
-  doLast {
-    copy {
-      from file("${projectDir}/docker/Dockerfile")
-      into(dockerBuildDir)
-    }
-    exec {
-      def image = "${dockerImageName}:${dockerBuildVersion}"
-      def dockerPlatform = ""
-      if (project.hasProperty('docker-platform')) {
-        dockerPlatform = "--platform ${project.getProperty('docker-platform')}"
-        println "Building for platform ${project.getProperty('docker-platform')}"
-      }
-      def gitDetails = getGitCommitDetails(7)
-      // Detect the OS and set the executable
-      workingDir dockerBuildDir
-      if (System.getProperty('os.name').toLowerCase().contains('win')) {
-        executable 'cmd'
-        args '/c', "docker build ${dockerPlatform} --build-arg BUILD_DATE=${buildTime()} --build-arg VERSION=${dockerBuildVersion} --build-arg VCS_REF=${gitDetails.hash} -t ${image} ."
-      } else {
-        executable 'bash'  // or 'sh'
-        args '-c', "docker build ${dockerPlatform} --build-arg BUILD_DATE=${buildTime()} --build-arg VERSION=${dockerBuildVersion} --build-arg VCS_REF=${gitDetails.hash} -t ${image} ."
-      }
-    }
-  }
-}
 
 tasks.register('testDocker') {
   dependsOn distDocker
