--- a/build.gradle
+++ b/build.gradle
@@ -242,116 +242,116 @@ tasks.register('testDocker') {
   }
 }
 
-tasks.register('dockerUpload') {
-  dependsOn distDocker
-  def architecture = System.getenv('architecture')
-  def image = "${dockerImageName}:${dockerBuildVersion}"
-  def additionalTags = []
-
-  if (project.hasProperty('branch') && project.property('branch') == 'main') {
-    additionalTags.add('develop')
-  }
-
-  if (!isInterimBuild(dockerBuildVersion)) {
-    additionalTags.add(dockerBuildVersion.split(/\./)[0..1].join('.'))
-  }
-
-  doLast {
-    exec {
-      def archVariantImage = "${image}-${architecture}"
-      def cmd = "docker tag '${image}' '${archVariantImage}' && docker push '${archVariantImage}'"
-      println "Executing '${cmd}'"
-      executable shell
-      args "-c", cmd
-    }
-  }
-}
-
-tasks.register('dockerUploadRelease') {
-  def archs = ["arm64", "amd64"]
-  def image = "${dockerImageName}:${dockerBuildVersion}"
-
-  doLast {
-    for (def architecture in archs) {
-
-      exec {
-        def cmd = "docker pull '${image}-${architecture}' && docker tag '${image}-${architecture}' '${dockerImageName}:latest-${architecture}'"
-        println "Executing '${cmd}'"
-        executable shell
-        args "-c", cmd
-      }
-      exec {
-        def cmd = "docker push '${dockerImageName}:latest-${architecture}'"
-        println "Executing '${cmd}'"
-        executable shell
-        args "-c", cmd
-      }
-
-
-      exec {
-        def archImage = "${image}-${architecture}"
-        def cmd = "docker pull '${archImage}' && docker tag ${archImage} '${dockerImageName}:latest-${architecture}'"
-        println "Executing '${cmd}'"
-        executable shell
-        args "-c", cmd
-      }
-      exec {
-        def cmd = "docker push '${dockerImageName}:latest-${architecture}'"
-        println "Executing '${cmd}'"
-        executable shell
-        args "-c", cmd
-      }
-    }
-  }
-}
-
-tasks.register('manifestDocker') {
-  def image = "${dockerImageName}:${dockerBuildVersion}"
-  def archs = [
-    "arm64",
-    "amd64"] //TODO: this assumes dockerUpload task has already been run on 2 different archs!
-  doLast {
-    exec {
-      def targets = ""
-      archs.forEach { arch -> targets += "'${image}-${arch}' " }
-      def cmd = "docker manifest create '${image}' ${targets}"
-      println "Executing '${cmd}'"
-      executable shell
-      args "-c", cmd
-    }
-    exec {
-      def cmd = "docker manifest push '${image}'"
-      println "Executing '${cmd}'"
-      executable shell
-      args "-c", cmd
-    }
-  }
-}
-
-tasks.register('manifestDockerRelease') {
-  def archs = ["arm64", "amd64"]
-  def baseTag = "${dockerImageName}:latest";
-
-  doLast {
-
-    exec {
-      def targets = ""
-      archs.forEach { arch -> targets += "'${baseTag}-${arch}' " }
-      def cmd = "docker manifest create '${baseTag}' ${targets} --amend"
-      println "Executing '${cmd}'"
-      executable shell
-      args "-c", cmd
-    }
-    exec {
-      def cmd = "docker manifest push '${baseTag}'"
-      println "Executing '${cmd}'"
-      executable shell
-      args "-c", cmd
-    }
-  }
-}
-
-
+//tasks.register('dockerUpload') {
+//  dependsOn distDocker
+//  def architecture = System.getenv('architecture')
+//  def image = "${dockerImageName}:${dockerBuildVersion}"
+//  def additionalTags = []
+//
+//  if (project.hasProperty('branch') && project.property('branch') == 'main') {
+//    additionalTags.add('develop')
+//  }
+//
+//  if (!isInterimBuild(dockerBuildVersion)) {
+//    additionalTags.add(dockerBuildVersion.split(/\./)[0..1].join('.'))
+//  }
+//
+//  doLast {
+//    exec {
+//      def archVariantImage = "${image}-${architecture}"
+//      def cmd = "docker tag '${image}' '${archVariantImage}' && docker push '${archVariantImage}'"
+//      println "Executing '${cmd}'"
+//      executable shell
+//      args "-c", cmd
+//    }
+//  }
+//}
+//
+//tasks.register('dockerUploadRelease') {
+//  def archs = ["arm64", "amd64"]
+//  def image = "${dockerImageName}:${dockerBuildVersion}"
+//
+//  doLast {
+//    for (def architecture in archs) {
+//
+//      exec {
+//        def cmd = "docker pull '${image}-${architecture}' && docker tag '${image}-${architecture}' '${dockerImageName}:latest-${architecture}'"
+//        println "Executing '${cmd}'"
+//        executable shell
+//        args "-c", cmd
+//      }
+//      exec {
+//        def cmd = "docker push '${dockerImageName}:latest-${architecture}'"
+//        println "Executing '${cmd}'"
+//        executable shell
+//        args "-c", cmd
+//      }
+//
+//
+//      exec {
+//        def archImage = "${image}-${architecture}"
+//        def cmd = "docker pull '${archImage}' && docker tag ${archImage} '${dockerImageName}:latest-${architecture}'"
+//        println "Executing '${cmd}'"
+//        executable shell
+//        args "-c", cmd
+//      }
+//      exec {
+//        def cmd = "docker push '${dockerImageName}:latest-${architecture}'"
+//        println "Executing '${cmd}'"
+//        executable shell
+//        args "-c", cmd
+//      }
+//    }
+//  }
+//}
+//
+//tasks.register('manifestDocker') {
+//  def image = "${dockerImageName}:${dockerBuildVersion}"
+//  def archs = [
+//    "arm64",
+//    "amd64"] //TODO: this assumes dockerUpload task has already been run on 2 different archs!
+//  doLast {
+//    exec {
+//      def targets = ""
+//      archs.forEach { arch -> targets += "'${image}-${arch}' " }
+//      def cmd = "docker manifest create '${image}' ${targets}"
+//      println "Executing '${cmd}'"
+//      executable shell
+//      args "-c", cmd
+//    }
+//    exec {
+//      def cmd = "docker manifest push '${image}'"
+//      println "Executing '${cmd}'"
+//      executable shell
+//      args "-c", cmd
+//    }
+//  }
+//}
+//
+//tasks.register('manifestDockerRelease') {
+//  def archs = ["arm64", "amd64"]
+//  def baseTag = "${dockerImageName}:latest";
+//
+//  doLast {
+//
+//    exec {
+//      def targets = ""
+//      archs.forEach { arch -> targets += "'${baseTag}-${arch}' " }
+//      def cmd = "docker manifest create '${baseTag}' ${targets} --amend"
+//      println "Executing '${cmd}'"
+//      executable shell
+//      args "-c", cmd
+//    }
+//    exec {
+//      def cmd = "docker manifest push '${baseTag}'"
+//      println "Executing '${cmd}'"
+//      executable shell
+//      args "-c", cmd
+//    }
+//  }
+//}
+//
+//
 
 // Takes the version and if it contains SNAPSHOT, alpha, beta or RC in version then return true indicating an interim build
 def isInterimBuild(dockerBuildVersion) {
