--- a/core/build.gradle
+++ b/core/build.gradle
@@ -63,5 +63,5 @@ dependencies {
   testImplementation libs.assertj.core
   testRuntimeOnly libs.junit.jupiter.engine
 
-  //runtimeOnly 'org.apache.logging.log4j:log4j-jul:2.24.2'
+  runtimeOnly 'org.apache.logging.log4j:log4j-jul:2.24.2'
 }
