--- a/build.gradle
+++ b/build.gradle
@@ -213,146 +213,64 @@ jacocoTestReport {
 }
 
 def dockerBuildVersion = project.hasProperty('release.releaseVersion') ? project.property('release.releaseVersion') : "${rootProject.version}"
-def dockerOrgName = project.hasProperty('dockerOrgName') ? project.getProperty("dockerOrgName") : "meldsun_labs"
+def dockerOrgName = project.hasProperty('dockerOrgName') ? project.getProperty("dockerOrgName") : "meldsun"
 def dockerArtifactName = project.hasProperty("dockerArtifactName") ? project.getProperty("dockerArtifactName") : "samba"
 def dockerImageName = "${dockerOrgName}/${dockerArtifactName}"
 
 apply from: 'buildscripts/buildDocker.gradle'
 
 
-tasks.register('testDocker') {
-  dependsOn distDocker
-  def dockerReportsDir = "docker/reports/"
+//tasks.register('testDocker') {
+//  dependsOn distDocker
+//  def dockerReportsDir = "docker/reports/"
+//
+//  doFirst {
+//    new File(dockerReportsDir).mkdir()
+//  }
+//
+//  doLast {
+//    exec {
+//      def image = project.hasProperty('release.releaseVersion') ? "${dockerImageName}:" + project.property('release.releaseVersion') : "${dockerImageName}:${project.version}"
+//      workingDir "${projectDir}/docker"
+//      if (System.getProperty('os.name').toLowerCase().contains('win')) {
+//        executable 'cmd'
+//        args "-c", "./test.sh ${image}"
+//      } else {
+//        executable 'bash'  // or 'sh'
+//        args "-c", "./test.sh ${image}"
+//      }
+//    }
+//  }
+//}
 
-  doFirst {
-    new File(dockerReportsDir).mkdir()
+tasks.register('dockerUpload') {
+  dependsOn distDocker
+  def image = "${dockerImageName}:${dockerBuildVersion}"
+  def additionalTags = []
+
+  if (project.hasProperty('branch') && project.property('branch') == 'main') {
+    additionalTags.add('develop')
+  }
+
+  if (!isInterimBuild(dockerBuildVersion)) {
+    additionalTags.add(dockerBuildVersion.split(/\./)[0..1].join('.'))
   }
 
   doLast {
     exec {
-      def image = project.hasProperty('release.releaseVersion') ? "${dockerImageName}:" + project.property('release.releaseVersion') : "${dockerImageName}:${project.version}"
-      workingDir "${projectDir}/docker"
+      def latest = "${dockerImageName}:latest"
+      def cmd = "docker tag '${image}' '${latest}' && docker push '${latest}'"
+      println "Executing '${cmd}'"
       if (System.getProperty('os.name').toLowerCase().contains('win')) {
         executable 'cmd'
-        args "-c", "./test.sh ${image}"
+        args "-c", cmd
       } else {
         executable 'bash'  // or 'sh'
-        args "-c", "./test.sh ${image}"
+        args "-c", cmd
       }
     }
   }
 }
-
-//tasks.register('dockerUpload') {
-//  dependsOn distDocker
-//  def architecture = System.getenv('architecture')
-//  def image = "${dockerImageName}:${dockerBuildVersion}"
-//  def additionalTags = []
-//
-//  if (project.hasProperty('branch') && project.property('branch') == 'main') {
-//    additionalTags.add('develop')
-//  }
-//
-//  if (!isInterimBuild(dockerBuildVersion)) {
-//    additionalTags.add(dockerBuildVersion.split(/\./)[0..1].join('.'))
-//  }
-//
-//  doLast {
-//    exec {
-//      def archVariantImage = "${image}-${architecture}"
-//      def cmd = "docker tag '${image}' '${archVariantImage}' && docker push '${archVariantImage}'"
-//      println "Executing '${cmd}'"
-//      executable shell
-//      args "-c", cmd
-//    }
-//  }
-//}
-//
-//tasks.register('dockerUploadRelease') {
-//  def archs = ["arm64", "amd64"]
-//  def image = "${dockerImageName}:${dockerBuildVersion}"
-//
-//  doLast {
-//    for (def architecture in archs) {
-//
-//      exec {
-//        def cmd = "docker pull '${image}-${architecture}' && docker tag '${image}-${architecture}' '${dockerImageName}:latest-${architecture}'"
-//        println "Executing '${cmd}'"
-//        executable shell
-//        args "-c", cmd
-//      }
-//      exec {
-//        def cmd = "docker push '${dockerImageName}:latest-${architecture}'"
-//        println "Executing '${cmd}'"
-//        executable shell
-//        args "-c", cmd
-//      }
-//
-//
-//      exec {
-//        def archImage = "${image}-${architecture}"
-//        def cmd = "docker pull '${archImage}' && docker tag ${archImage} '${dockerImageName}:latest-${architecture}'"
-//        println "Executing '${cmd}'"
-//        executable shell
-//        args "-c", cmd
-//      }
-//      exec {
-//        def cmd = "docker push '${dockerImageName}:latest-${architecture}'"
-//        println "Executing '${cmd}'"
-//        executable shell
-//        args "-c", cmd
-//      }
-//    }
-//  }
-//}
-//
-//tasks.register('manifestDocker') {
-//  def image = "${dockerImageName}:${dockerBuildVersion}"
-//  def archs = [
-//    "arm64",
-//    "amd64"] //TODO: this assumes dockerUpload task has already been run on 2 different archs!
-//  doLast {
-//    exec {
-//      def targets = ""
-//      archs.forEach { arch -> targets += "'${image}-${arch}' " }
-//      def cmd = "docker manifest create '${image}' ${targets}"
-//      println "Executing '${cmd}'"
-//      executable shell
-//      args "-c", cmd
-//    }
-//    exec {
-//      def cmd = "docker manifest push '${image}'"
-//      println "Executing '${cmd}'"
-//      executable shell
-//      args "-c", cmd
-//    }
-//  }
-//}
-//
-//tasks.register('manifestDockerRelease') {
-//  def archs = ["arm64", "amd64"]
-//  def baseTag = "${dockerImageName}:latest";
-//
-//  doLast {
-//
-//    exec {
-//      def targets = ""
-//      archs.forEach { arch -> targets += "'${baseTag}-${arch}' " }
-//      def cmd = "docker manifest create '${baseTag}' ${targets} --amend"
-//      println "Executing '${cmd}'"
-//      executable shell
-//      args "-c", cmd
-//    }
-//    exec {
-//      def cmd = "docker manifest push '${baseTag}'"
-//      println "Executing '${cmd}'"
-//      executable shell
-//      args "-c", cmd
-//    }
-//  }
-//}
-//
-//
 
 // Takes the version and if it contains SNAPSHOT, alpha, beta or RC in version then return true indicating an interim build
 def isInterimBuild(dockerBuildVersion) {
