--- a/storage-rocksdb/build.gradle
+++ b/storage-rocksdb/build.gradle
@@ -4,3 +4,24 @@ plugins {
 
 group = 'samba.storage-rocksdb'
 version = '1.0.0'
+
+dependencies {
+  implementation libs.apache.logging.log4j.api
+  implementation libs.apache.logging.log4j.core
+  implementation libs.rocksdbjni
+  implementation libs.prometheus.simpleclient
+  implementation libs.apache.commons.lang3
+  implementation libs.besu.internal.plugin.api //TODO need to be removed
+  implementation libs.besu.internal.metrics.core
+  implementation libs.google.guava
+  implementation libs.assertj.core
+  implementation libs.mockito.core
+
+  compileOnly libs.projectlombok
+  annotationProcessor libs.projectlombok
+  testCompileOnly libs.projectlombok
+  testAnnotationProcessor libs.projectlombok
+  testImplementation libs.junit.jupiter.api
+  testImplementation libs.assertj.core
+  testRuntimeOnly libs.junit.jupiter.engine
+}
