adding utp gradle module with code

--- a/platform/build.gradle
+++ b/platform/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     api project(':core')
     api project(':server-json-rpc')
     api project(':storage-rocksdb')
+    api project(':utp')
     api project(':execution-history-network')
     api project(':execution-state-network')
   }
