Refactoring UTP files, adding portalHistoryFindContent endpoint, adding content decoder, adding UTPService

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -57,6 +57,7 @@ dependencies {
 
   implementation project(':storage-rocksdb')
   implementation project(':server-json-rpc')
+  implementation project(':utp')
   compileOnly libs.projectlombok
   annotationProcessor libs.projectlombok
   testCompileOnly libs.projectlombok
