--- a/core/build.gradle
+++ b/core/build.gradle
@@ -57,7 +57,8 @@ dependencies {
 
   implementation project(':storage-rocksdb')
   implementation project(':server-json-rpc')
-  implementation project(':utp')
+  implementation 'org.meldsun.utp:utp-core:1.0-SNAPSHOT'
+
   compileOnly libs.projectlombok
   annotationProcessor libs.projectlombok
   testCompileOnly libs.projectlombok
