--- a/besu-plugin/gradle.properties
+++ b/besu-plugin/gradle.properties
@@ -1,2 +1,5 @@
 releaseVersion=1.0.0
-besuVersion=24.12.1
+besuVersion=25.2.1
+besuArtifactGroup=org.hyperledger.besu
+distributionIdentifier=samba-besu-plugin
+distributionBaseUrl=https://github.com/hyperledger/besu/releases/download/
